--- a/package.json
+++ b/package.json
@@ -16,17 +16,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rodrigorgtic/image360viewer.git"
+    "url": "git+https://github.com/mlbuson/imagenes360.git"
   },
   "bugs": {
-    "url": "https://github.com/rodrigorgtic/image360viewer/issues"
+    "url": "https://github.com/mlbuson/imagenes360"
   },
-  "homepage": "https://github.com/rodrigorgtic/image360viewer/blob/master/README.md",
-  "peerDependencies": {
-    "react-native": ">=0.42.0",
-    "react": ">=16.9.35",
-    "react-native-svg": ">=12.1.1"
-  },
+ 
   "dependencies": {
     "normalize-svg-path": "^1.1.0",
     "parse-svg-path": "^0.1.2",
